frontend/test/should_pass/ret_006.grg
rule r : (Node)
{
    x:Node;

    modify {
    	z:Node<x>;
        return(z);
    }
}
