frontend/test/should_fail/ret_026.grg
rule r : (Node)
{
    x:Node;

    modify {
    	z:Node<x>;
        return(x);
    }
}
